@@ -1,6 +1,7 @@
 2009-04-28  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Added a method to set an alternative storage to the storage factory
+	* Do not use expired keys in the split storage
 
 2009-04-13  Dmitry Dulepov  <dmitry@typo3.org>
 
